--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "egg-cors": "^2.2.3",
     "egg-router-plus": "^1.3.1",
     "egg-scripts": "^2.11.0",
+    "egg-sequelize": "^6.0.0",
     "mysql2": "^2.2.5"
   },
   "devDependencies": {
