--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "egg": "^2.15.1",
     "egg-cors": "^2.2.3",
+    "egg-parameters": "^1.1.2",
     "egg-router-plus": "^1.3.1",
     "egg-scripts": "^2.11.0",
     "egg-sequelize": "^6.0.0",
