--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "declarations": true
   },
   "dependencies": {
+    "@octokit/core": "^3.5.1",
+    "download-git-repo": "^3.0.2",
     "egg": "^2.15.1",
     "egg-cors": "^2.2.3",
     "egg-parameters": "^1.1.2",
